--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "crisisgo colors",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "release": "bumpp && pnpm publish"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "bumpp": "^9.5.2"
+  }
 }
